--- a/gb/22/1/14/n13504724.md
+++ b/gb/22/1/14/n13504724.md
@@ -1,16 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xzadft364/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xzadft364/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xzadft364/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xzadft364/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xzadft364/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xzadft364/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xzadft364/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大陆产口罩现众院 美议员吁从中国撤资</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/01/id13504997-GettyImages-1325271775-600x400.jpg" />
 <h6>资料图：2021年6月24日，美国共和党众议员布拉德?温斯特鲁普（Brad Wenstrup，中）等在华盛顿特区国会大厦外。(Chip Somodevilla/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2022年01月14日讯】（大纪元记者李言综合报导）Omicron变种毒株迅速传播之际，印有“<ahref="https://github.com/xzadft364/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A0.md#1">中国制造</a>”（MADE IN CHINA）字样的KN95<ahref="https://github.com/xzadft364/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>现身美国众议院，引发议员们反弹。有议员呼吁从中国撤资，因为不安全的供应链带来更大风险。</p>
-<p>众议院医生最近命令议员们用N95或KN95<ahref="https://github.com/xzadft364/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>替换他们之前佩戴的布质口罩，以防止COVID-19（中共病毒引发的疾病）Omicron变体传播。</p>
+	<p>【大纪元2022年01月14日讯】（大纪元记者李言综合报导）Omicron变种毒株迅速传播之际，印有“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A0.md#1">中国制造</a>”（MADE IN CHINA）字样的KN95<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>现身美国众议院，引发议员们反弹。有议员呼吁从中国撤资，因为不安全的供应链带来更大风险。</p>
+<p>众议院医生最近命令议员们用N95或KN95<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>替换他们之前佩戴的布质口罩，以防止COVID-19（中共病毒引发的疾病）Omicron变体传播。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 200px; margin-bottom: 20px; border-radius: 6px; overflow: hidden;"><a style="width: 100%; height: 200px;" src="https://player.captivate.fm/episode/2d7cb9fb-7d8b-41ad-950f-71a3737d3e1d" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
 <p>这些口罩由主治医生办公室（Office of the Attending Physician）送到了议员办公室。议员们现在要戴上这些口罩才能进入众议院大厅，这引起议员们不满。</p>
 <p>众议院共和党医生核心小组主席、俄亥俄州议员布拉德?温斯特鲁普（Brad Wenstrup）周四（1月13日）告诉福克斯新闻，美国“不安全的供应链给我们整个国家人民的健康带来更大风险”。</p>
-<p>“我们在美国国会被强制佩戴的口罩是在<ahref="https://github.com/xzadft364/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A0.md#1">中国制造</a>的，这只是我们无法在不依靠对手的情况下保护和治疗美国人的一个例子。”温斯特鲁普继续说，“这些中国口罩进一步凸显我们需要从（中国共产党）那里撤资。我们的国家安全和我们的健康依赖于此。”</p>
+<p>“我们在美国国会被强制佩戴的口罩是在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A0.md#1">中国制造</a>的，这只是我们无法在不依靠对手的情况下保护和治疗美国人的一个例子。”温斯特鲁普继续说，“这些中国口罩进一步凸显我们需要从（中国共产党）那里撤资。我们的国家安全和我们的健康依赖于此。”</p>
 <p>议员们口罩升级之际，COVID-19（中共病毒）Omicron变体病例正在美国各地继续攀升。</p>
 <p>北卡罗来纳州众议员格雷格?墨菲（Greg Murphy）周四表示，在“我们正在与一种来自中国的病毒做斗争”之际，“却公开支持一家中国制造商，将我们纳税人的钱送到海外，并进一步宣传我们对中国的依赖”，这是一种“残酷的讽刺”。</p>
 <p>就毒性而言，Omicron或不比Delta变体强，但它的传染性却远超Delta，并迅速取代了Delta之前的主导地位。</p>
@@ -24,46 +27,48 @@
 <p>同期，麻州也因类似原因出现拒绝使用KN95口罩的情况。</p>
 <p>责任编辑：林妍#</p>
 <div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 346px; top: 220px; width: 273.734px; height: 19px;"></div>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 28px; width: 878.453px; height: 43px;"></div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: -1px; top: 81px; opacity: 1;"></div>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/20/4/24/n12057617.md#1">加拿大买百万个中国制KN95口罩不合格</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/20/4/28/n12068275.md#1">美国麻州一警局：中国制KN95口罩不合格</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/20/5/2/n12078431.md#1">中国制KN95口罩 麻州测试无一达标</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/20/6/8/n12169314.md#1">美海关截获1万未经批准中国产KN95口罩</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/24/n12057617.md#1">加拿大买百万个中国制KN95口罩不合格</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/28/n12068275.md#1">美国麻州一警局：中国制KN95口罩不合格</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/2/n12078431.md#1">中国制KN95口罩 麻州测试无一达标</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/8/n12169314.md#1">美海关截获1万未经批准中国产KN95口罩</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/3/n10112268.md#1" target="_blank">林辉：红色公主的大字报让军报少将家破人亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240051.md#1" target="_blank">纽约州奥伯尼市长宣布5月13日法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010938.md#1" target="_blank">古罗马迫害基督徒与中共迫害法轮功对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/3/n13479197.md#1">麦克阿瑟的韩战及台湾预言</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/7/n13489253.md#1">【百年真相】送钱送女儿 谷俊山升官“秘诀”</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/7/n13488752.md#1">腊八吃腊八粥好养生 怎样做营养腊八粥？</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/6/n13486963.md#1">【未解之谜】300万年前火星上的核战</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/21/11/28/n13403471.md#1">【人生之钥】弱女子占一卦 忍辱改变了下半生</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/13/n13502555.md#1">【拍案惊奇】百度“解禁”习敏感词</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/13/n13502602.md#1">【微视频】疫情蔓延 中共再封城 民众如何生存</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/13/n13503030.md#1">【财商天下】中俄争锋 北京新风险</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/12/n13500438.md#1">中共甩锅？钟南山旗下公司涉“传播病毒”被查</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/11/n13498100.md#1">被问林志玲高圆圆谁更美 黄渤幽默回应获赞</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/12/n13498611.md#1">孙力军案续发酵 知情人析中共权力分配内幕</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/12/n13500688.md#1">曾拒绝成龙天价片酬 元华曝光原因 网民盛赞</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/11/n13498100.md#1">被问林志玲高圆圆谁更美 黄渤幽默回应获赞</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/12/n13500396.md#1">章子怡汪峰才退出股东 原共同投资公司就被罚</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/13/n13500881.md#1">自曝外表常被评论 58岁叶童吐心声</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/11/n13497982.md#1">高圆圆产后复出拍新剧 赵又廷住剧组帮对台词</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/12/n13500035.md#1">研究：缺乏维生素B12等营养增加抑郁症风险</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/11/n13497429.md#1">藏红花是昂贵的药草！防黄斑部病变、护视力</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/6/n13486023.md#1">是不是领导型人才 看“脸”就知一二</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/10/n13495610.md#1">体温升1度 可以长寿、美容！名医4方法暖身</a></li>
-<li><a href="https://github.com/xzadft364/djy/blob/master/gb/22/1/11/n13497825.md#1">蓬佩奥半年瘦40公斤 这2招简单却不易复胖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xzadft364/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xzadft364/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/14/n13504724.htm">大陆产口罩现众院 美议员吁从中国撤资</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/14/n13504724.htm">大陆产口罩现众院 美议员吁从中国撤资</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xzadft364/djy/blob/master/gb/22/1/14/n13504724.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xzadft364/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xzadft364/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xzadft364/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xzadft364/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xzadft364/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/22/1/14/n13504724.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
